{
    "name": "TouchControl",
    "maps": [
        {
            "name": "TouchMove",
            "id": "d1ed5e55-650f-4980-b042-4166033384f8",
            "actions": [
                {
                    "name": "MoveHorizontal",
                    "type": "Value",
                    "id": "ff6a9501-206e-41b5-b459-e9c1b4385dd7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8ca1e740-720d-453a-bda5-a7ed5dfc9255",
                    "path": "<Touchscreen>/primaryTouch/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}